Update 2. SIEM and SOC Fundamentals.md
testing

--- a/HackTheBox/SOC Analyst Path/2. SIEM and SOC Fundamentals.md
+++ b/HackTheBox/SOC Analyst Path/2. SIEM and SOC Fundamentals.md
@@ -1,6 +1,6 @@
 ```table-of-contents
 ```
-# What is SIEM?
+# What is SIEM? lol
 - Security Information and Event Management (SIEM)
 - merge the management of security data with the supervision of security events.
 - these facilitate real-time evaluations of alerts related to security, which are produced by network hardware and applications.
